acrylicstyle/ssh/test3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test3
  namespace: acrylicstyle-ssh
spec:
  selector:
    matchLabels:
      app: test3
  revisionHistoryLimit: 2
  replicas: 1
  template:
    metadata:
      labels:
        app: test3
    spec:
      containers:
      - name: test3
        image: ubuntu:jammy-20260924.1
        command: [
          "bash",
          "-c",
          "apt update && apt install openssh-server -y && /etc/init.d/ssh start &&
          adduser --disabled-password --gecos '' perfectboat &&
          mkdir /home/perfectboat/.ssh && touch /home/perfectboat/.ssh/authorized_keys && chmod -R 700 /home/perfectboat/.ssh && chown -hR perfectboat:perfectboat /home/perfectboat/.ssh &&
          echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGNg17ghsz/2JsbGWj0woNKpzICM60IYSjry2yhZjm8F pabo-main' >> /home/perfectboat/.ssh/authorized_keys &&
          sleep 99999999d"
        ]
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: "1000m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
      volumes:
      - name: data
        hostPath:
          path: /srv/test3
          type: Directory
      terminationGracePeriodSeconds: 60 # 1 minute
      nodeName: perfectboat
---
apiVersion: v1
kind: Service
metadata:
  name: test3-svc
  namespace: acrylicstyle-ssh
spec:
  type: NodePort
  selector:
    app: test3
  ports:
    - name: ssh-port
      port: 31000
      targetPort: 22
      nodePort: 31000
