acrylicstyle/ssh/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-network-policy
  namespace: acrylicstyle-ssh
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - ports:
    - port: 22
      protocol: TCP
  egress:
  - to:
    # archive.ubuntu.com
    # security.ubuntu.com
    - ipBlock:
        cidr: 185.125.190.36/32
    - ipBlock:
        cidr: 185.125.190.39/32
    - ipBlock:
        cidr: 91.189.91.39/32
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-network-policy
  namespace: acrylicstyle-ssh
spec:
  podSelector:
    matchLabels:
      network/allow-egress: "true"
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
